# single-cell-snakemake

./: .gitignore  README.md  create_directories.sh  pyproject.toml
config/: config.yaml  samples.tsv
scpipe/: __init__.py  contract_errors.py  converters.py  lazy_r_env.py  protocols.py  rpy2_default_conversions.py  types.py
scpipe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scpipe/api/: assemble.py  embedding.py  graph.py  pipeline.py  qc.py  qc_configs.py
scpipe/interop/: exceptions.py  r_converters.py  r_qc.py  rpy2_default_conversions.py  seurat_converters.py
scpipe/ops/: anndata_io.py  artifacts.py  cluster_ops.py  graph_ops.py  integration_ops.py  pca_ops.py  qc_scanpy.py  scanpy_ops.py  scvi_ops.py  seurat_ops.py  umap_ops.py
scpipe/ops/embedding/: harmony_scanpy.py  pca_scanpy.py  scvi_scvi.py
scpipe/ops/manifold/: umap_scanpy.py
scpipe/ops/neighbors/: scanpy.py
workflow/: Snakefile
workflow/.ipynb_checkpoints/: Snakefile-checkpoint
workflow/environments/: bbknn.yaml  harmony.yaml  r_qc.yaml  scanpy.yaml  scrublet_legacy.yaml  scvi.yaml  seurat_preprocessing.yaml
workflow/rules/: common.smk  preprocessing.smk  scanpy_pipeline.smk
workflow/scripts/: concat_samples.py  embed_counts.py  graph_umap_leiden.py  integrate_toggle.py  pca_from_concat.py  qc_compute_metrics.py  qc_filter.py  run_scdblfinder.py  run_scrublet.py
workflow/scripts/pipelines/: scanpy_qc.py
workflow/scripts/preprocessing/: seurat_sctransform_script.R  seurat_sctransform_with_rpy2.py
